# tw-etf-analyzer

./: .gitignore  AGENT_CONTEXT.md  CLAUDE.md  README.md  etf_cli.py  etf_core.py  etf_pdf.py  etf_web.py  packages.txt  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
tests/: conftest.py  test_metrics.py  test_performance.py  test_simulation.py  test_tax.py
tw_etf_analyzer/: __init__.py  config.py  constants.py
tw_etf_analyzer/cli/: __init__.py  main.py
tw_etf_analyzer/cli/commands/: __init__.py  _format.py  compare.py  dividend.py  perf.py  retire.py  target.py  track.py
tw_etf_analyzer/core/: __init__.py  data.py  metrics.py  performance.py  simulation.py  tax.py
tw_etf_analyzer/pdf/: __init__.py  builder.py
tw_etf_analyzer/web/: __init__.py  bootstrap.py  cache.py  context.py  display.py  presets.py  sidebar.py  storage.py
tw_etf_analyzer/web/views/: __init__.py  compare.py  dividend.py  pdf_export.py  performance.py  retirement.py  stress.py  target.py  tracking.py
